--- a/google-cloud-notebook/Dockerfile
+++ b/google-cloud-notebook/Dockerfile
@@ -8,17 +8,18 @@ USER $NB_USER
 
 # Added --ignore-installed. See https://stackoverflow.com/questions/42020151/cannot-remove-entries-from-nonexistent-file
 RUN pip install --upgrade setuptools --ignore-installed
-# Install google-api-python-client
+
+# Install google stuff
 RUN pip install 'google-api-python-client'
+
+RUN pip install 'google-cloud'
+RUN pip install 'google-cloud-bigquery'
+
 RUN pip install --upgrade google-cloud
 RUN pip install --upgrade google-cloud-bigquery
 RUN pip install --upgrade oauth2client
 
-# Install 2.7 version
-RUN pip install 'google-api-python-client'
-RUN pip install 'google-api-python-client'
-RUN pip install 'google-cloud'
-RUN pip install 'google-cloud-bigquery'
+RUN pip install 'pandas-gbq'
 
 # Set google application environment variable so we can login without issue
 ENV GOOGLE_APPLICATION_CREDENTIALS=/home/jovyan/work/VendastaBizOps-key.json
